# week9-policy-assist-room-c

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SINS-STANDARDS-CONSTRAINED.md  SINS-STANDARDS.md  SINS.md  ai-log.md  commitlint.config.cjs  plan.md  pyproject.toml  scratchpad.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  evals.yml
docs/superpowers/plans/: 2026-07-16-wave-0-shared-constants-and-spike.md  2026-07-16-wave-1a-sessions-and-history.md  2026-07-16-wave-1b-prompt-caching.md  2026-07-16-wave-2a-reliability.md  2026-07-16-wave-2b-prod-and-injection.md  2026-07-16-wave-3-evals-and-manual-workflow.md
docs/superpowers/specs/: 2026-07-16-policyassist-hardening-workflow-design.md
monitoring/: README.md  __init__.py  cost.py  finops.py  instrumentation.py  prices.yaml
policyassist/: README.md  __init__.py  app.py  config.py  history.py  manual.txt
policyassist/templates/: index.html
signoz/: README.md
signoz/dashboards/: README.md
tests/: test_app_ask.py  test_app_caching.py  test_app_injection_signals.py  test_app_retries.py  test_app_sessions.py  test_config.py  test_cost.py  test_finops.py  test_history.py  test_instrumentation.py  test_sanity.py
tests/evals/: golden.yaml  run_evals.py  test_runner.py
